Loading animation is now visible in Firefox Bug #39018
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-2@62526 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-activation/css/tabs.styl
+++ b/base/univention-system-activation/css/tabs.styl
@@ -42,7 +42,7 @@
 		transition: opacity 1s ease-in-out;
 		width: 100%;
 		height: 32px;
-		background: url(icons/loading-bubbles.svg) no-repeat;
+		background: url(icons/loading-bubbles.gif) no-repeat;
 		background-position: center center;
 	}
 
